Clean-up duplicate code, adjust netbios to python conventions

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,9 @@
 *.swp
+*.pyc
+__pycache__
 stripe_sk
 stripe*test*
 stripe*live*
-sources
-*/testbench
-*/warden
-*/wardensdk
-*/warden-ui
-*/tachyon
-*/vane
-*/ca
-*/password
-REVISIONS
-docker-compose.yml
-.warden-scale
-.keys
 bin
 include
 lib
